@@ -2,14 +2,14 @@
 .\" Process with
 .\" nroff -man hex2bin.3
 .\" 2011-03-18 JoungKyun Kim <htt://oops.org>
-.\" $Id: hex2bin.3,v 1.8 2011-03-29 16:46:07 oops Exp $
+.\" $Id: hex2bin.3,v 1.9 2011-03-29 17:17:06 oops Exp $
 .SH NAME
 hex2bin \- Convert hexadecimal string to binary string
 
 .SH SYNOPSIS
 .B #include <olibc/libstring.h>
 .sp
-.BI "char * hex2bin (char *str);"
+.BI "char * hex2bin (char *str, size_t * outlen);"
 
 .SH "Link library"
 .B \-loc
@@ -33,6 +33,18 @@ that follows BSD license.
 .SH DESCRIPTION
 Convert hexadecimal string to binary string
 
+.TP
+.B str
+.br
+The input hexadecimal string
+
+.TP
+.B outlen
+.br
+The length of return value. If this argument set null,
+.BI hex2bin()
+api don't count the length of return value.
+
 .SH "RETURN VALUE"
 The pointer of binary string. When occurs internal error,
 .BI hex2bin()
@@ -47,10 +59,11 @@ null, the caller should deallocate this buffer using
 int main (void) {
     char * data = "6EA7";
     char * ret;
+    size_t len;
 
-    ret = hex2bin (data);
+    ret = hex2bin (data, &len);
 
-    printf ("%s\\n", ret);
+    printf ("%s (%d)\\n", ret, len);
     free (ret);
     return 0;
 }
