@@ -2,14 +2,14 @@
 .\" Process with
 .\" nroff -man hex2bin.3
 .\" 2011-03-18 JoungKyun Kim <htt://oops.org>
-.\" $Id: hex2bin.3,v 1.2 2011-03-29 16:46:07 oops Exp $
+.\" $Id: hex2bin.3,v 1.3 2011-03-29 17:17:06 oops Exp $
 .SH 이름
 hex2bin \- 8진수 문자열을 2진수 문자열로 변환
 
 .SH 사용법
 .B #include <olibc/libstring.h>
 .sp
-.BI "char * hex2bin (char *str);"
+.BI "char * hex2bin (const char * str, size_t * outlen);"
 
 .SH 라이브러리 링크
 .B \-loc
@@ -33,6 +33,16 @@ BSD 라이센스의 적용을 원한다면
 .SH 설명
 hex2bin 은 16진수 형태의 문자열을 이진수의 문자열로 반환한다.
 
+.TP
+.B str
+.br
+입력한 16진수 문자열
+
+.TP
+.B outlen
+.br
+반환값의 길이
+
 .SH 반환값
 이진수 형태의 문자열로 반환. 내부 에러가 발생했을 경우 NULL을
 반환한다. 반환값이 NULL이 아닐 경우
@@ -46,10 +56,11 @@ api로 메모리를 반환해야 한다.
 int main (void) {
     char * data = "6EA7";
     char * ret;
+    size_t len;
 
-    ret = hex2bin (data);
+    ret = hex2bin (data, &len);
 
-    printf ("%s\\n", ret);
+    printf ("%s (%d)\\n", ret, len);
     free (ret);
     return 0;
 }
